@@ -1,11 +1,14 @@
                                                          -*- coding: utf-8 -*-
 Changes with Apache 2.0.57
 
+  *) mod_isapi: Various trivial code-fixes to permit mod_isapi to load and
+     run on Unix. [William Wrowe]
+
   *) HTML-escape the Expect error message.  Not classed as security as
      an attacker has no way to influence the Expect header a victim will
      send to a target site.  Reported by Thiago Zaninotti
      <thiango nstalker.com>. [Mark Cox]
-    
+
 Changes with Apache 2.0.56
 
   *) SECURITY: CVE-2005-3357 (cve.mitre.org)
